# Trowel-py

./: .env.example  .gitignore  LICENSE  README.md  ReadMe.md  config.example.toml  directory.md  migrate.sh  pyproject.toml  syntaxErrorCheck.sh
docs/: training-log.md
scripts/: build-package.sh
tests/: conftest.py  test_app.py  test_card_api_schemas.py  test_card_repository.py  test_db.py  test_explanation_history_repository.py  test_extract_conversation.py  test_feynman_routes.py  test_feynman_service.py  test_garden_routes.py  test_garden_service.py  test_health.py  test_llm_client.py  test_player_routes.py  test_player_service.py  test_re_explain_routes.py  test_re_explain_service.py  test_review_repo_new.py  test_review_service.py
tests/agent_host/: conftest.py  test_agent_event_schema.py  test_app.py  test_cc_adapter.py  test_codex_adapter.py  test_hub.py  test_integration_agent.py  test_routes.py  test_store.py
tests/app/: test_app.py  test_health.py
tests/cards/: test_card_api_schemas.py  test_card_repository.py  test_card_routes.py  test_card_service.py  test_explanation_history_repository.py  test_extract_conversation.py  test_jsonl_parser.py  test_re_explain_routes.py  test_re_explain_service.py
tests/cc_host/: conftest.py  test_background_tracker.py  test_checkpoint.py  test_delta.py  test_diff_snapshot.py  test_history.py  test_input.py  test_integration.py  test_launcher.py  test_launcher_scan.py  test_models.py  test_proxy.py  test_proxy_routes.py  test_routes.py  test_schemas.py  test_service.py  test_session_registration.py  test_session_scan.py  test_slash_items.py  test_spawn_profile_injection.py  test_stalled.py  test_subagent_usage.py  test_tool_use_result.py  test_translator.py  test_workflow_watcher.py
tests/codex_host/: _fake.py  _manager_support.py  conftest.py  test_fixtures.py  test_integration.py  test_integration_071.py  test_manager.py  test_manager_approvals.py  test_manager_connection_lifecycle.py  test_manager_notifications.py  test_manager_protocol.py  test_manager_thread_binding.py  test_manager_turn_lifecycle.py  test_mcp_isolation.py  test_memory_mcp.py  test_pending_requests.py  test_protocol.py  test_recorder.py  test_secrets.py  test_session.py  test_translator.py  test_transport.py  test_version.py
tests/contracts/: public_contracts.py  test_public_contracts.py
tests/db/: test_connection.py  test_db.py  test_migrations.py
tests/events/: conftest.py  test_challenge.py  test_event_repository.py  test_events_cooldown.py  test_events_engine.py  test_rewards.py  test_service.py  test_sign_in.py  test_simple_handlers.py  test_weights.py
tests/feynman/: test_feynman_repository.py  test_feynman_routes.py  test_feynman_service.py
tests/garden/: test_garden_repository.py  test_garden_routes.py  test_garden_service.py
tests/integration/: test_m2_e2e.py
tests/llm/: test_llm_client.py
tests/memory/: conftest.py  test_access_log.py  test_activity_dates.py  test_attribution.py  test_cli_memory.py  test_compress.py  test_compress_golden.py  test_core_ops.py  test_cost.py  test_dictionary.py  test_dictionary_check.py  test_dictionary_rebuild.py  test_dictionary_state.py  test_dictionary_wiring.py  test_draft.py  test_dualtrack.py  test_episode.py  test_eval.py  test_eval_queries_fixture.py  test_hooks.py  test_ids.py  test_injection.py  test_judge.py  test_judge_prompt.py  test_judgements.py  test_logging.py  test_mcp_config.py  test_mcp_server.py  test_memory_review_scheduler.py  test_metrics_reflection.py  test_migrate.py  test_north_star.py  test_note_effects.py  test_paths.py  test_persist.py  test_persist_040a.py  test_persist_procedural.py  test_profile_distill_job.py  test_profile_distill_prompt.py  test_profile_distill_scheduler.py  (+24 more)
tests/model_os/: __init__.py  _episode_helpers.py  conftest.py  test_concurrency.py  test_context_journal.py  test_context_observer.py  test_episode_audit.py  test_episode_events.py  test_episode_fencing.py  test_episode_leases.py  test_episode_lifecycle.py  test_episode_reconcile.py  test_episode_recover.py  test_episode_recovery.py  test_episode_review2.py  test_episode_review3.py  test_episode_spec_coverage.py  test_episode_suspend.py  test_fault_injection.py  test_provenance.py  test_redaction.py  test_reducer.py  test_self_anti_forgery.py  test_self_assembler.py  test_self_manifest.py  test_store.py  test_task_gate.py  test_task_lifecycle.py  test_warm_pool.py  test_work_broker.py
tests/pet/: conftest.py  test_brain.py  test_repository.py  test_routes.py  test_service.py
tests/player/: test_player_repository.py  test_player_routes.py  test_player_service.py
tests/profile/: test_routes.py
tests/quota/: test_accounts.py  test_codex_parse.py  test_glm_client.py  test_glm_parse.py  test_observer.py  test_read_model.py  test_redaction.py  test_routes.py  test_scheduler.py
tests/review/: test_review_repository.py  test_review_routes_integration.py  test_review_scheduler.py  test_review_service.py
tests/schemas/: test_ownership_facades.py  test_schemas.py
tests/todo_loop/: __init__.py  test_expansion.py
trowel_py/: app.py  cli.py  config.py  server.py
trowel_py/agent_host/: __init__.py  binding.py  cc_adapter.py  codex_adapter.py  codex_event_mapping.py  codex_launch.py  codex_settings.py  events.py  history.py  hub.py  routes.py  schemas.py  store.py
trowel_py/cards/: explanation_history_repository.py  jsonl_parser.py  models.py  repository.py  routes.py  schemas.py  service.py
trowel_py/cc_host/: __init__.py  _checkpoint_git.py  background_tracker.py  checkpoint.py  delta.py  diff_snapshot.py  frontmatter.py  history.py  input.py  launcher.py  models.py  proxy.py  routes.py  schemas.py  service.py  session_lifecycle.py  session_registration.py  session_scan.py  slash_items.py  stalled.py  subagent_usage.py  system_events.py  tool_use_result.py  translator.py  workflow_journal.py  workflow_tree.py  workflow_watcher.py
trowel_py/codex_host/: __init__.py  catalog.py  command_mcp_codec.py  (+17 more)
web/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
(+887 files in other folders)
