[project]
name = "trowel-py"
# 0.1.0 = first pip-installable build (slice-027-publish). Bump per semver:
# the next user-visible behavior change → 0.2.0; a stable public API → 1.0.0.
version = "0.1.0"
description = "Trowel-py — desktop toolkit (chat + cc host + review cards) with a FastAPI backend and React frontend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "fsrs>=6.3.1",
    "httpx>=0.27.0",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    # "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
    # slice-038: memory store reads/writes YAML frontmatter (.md notes) and the
    # wiki/pages corpus (real YAML). Hand-rolling a parser is a liability on
    # real multi-line frontmatter, so use the battle-tested lib.
    "pyyaml>=6.0.2",
    # slice-040-c: memory MCP server (search/read/outcome) — cc spawns it as a
    # stdio subprocess via --mcp-config. Lowlevel Server + stdio transport.
    "mcp>=1.2.0",
]

[project.scripts]
# `pip install .` registers this console script: `trowel-py` starts the server.
trowel-py = "trowel_py.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trowel_py*"]

[tool.setuptools.package-data]
# Bundled frontend build (copied to trowel_py/static/ by the build step before
# `pip install .` — see slice-027-publish). Served same-origin by app.py.
# Also ship non-.py resources the runtime reads via __file__ (LLM prompts,
# DB migrations) — pip would otherwise drop them and import would fail.
trowel_py = [
  "static/**/*",
  "llm/prompts/*.txt",
  "db/migrations/*.sql",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# integration tests spawn a real `claude -p`; they deadlock inside an
# interactive claude session (#46416). Deselect by default; run explicitly with
# `CC_INTEGRATION=1 .venv/bin/python -m pytest -m integration tests/cc_host/test_integration.py`.
addopts = "-m 'not integration and not benchmark'"
markers = [
    "integration: tests that spawn a real `claude -p` subprocess (skip in nested interactive sessions; #46416)",
    "benchmark: slice-040 layer-2 quality checks that spawn a real cc distillation agent (run explicitly: pytest -m benchmark)",
]
