[project]
name = "trowel-py"
# 用户可见行为变化升级到 0.2.0；公开 API 稳定后升级到 1.0.0。
version = "0.1.0"
description = "Trowel-py — desktop toolkit (chat + cc host + review cards) with a FastAPI backend and React frontend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "fsrs>=6.3.1",
    "httpx>=0.27.0",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.48.0",
    # memory 需要可靠解析多行 YAML frontmatter 和 wiki/pages 语料。
    "pyyaml>=6.0.2",
    # CC 通过 --mcp-config 拉起基于 stdio transport 的 memory MCP server。
    "mcp>=1.2.0",
]

[project.scripts]
# 安装包注册 trowel-py 服务入口。
trowel-py = "trowel_py.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trowel_py*"]

[tool.setuptools.package-data]
# 打包前将前端产物复制到 trowel_py/static，由 app.py 同源托管。
# 运行时按 __file__ 读取的 prompt 和迁移文件也必须显式纳入 wheel。
trowel_py = [
  "static/**/*",
  "llm/prompts/*.txt",
  "db/migrations/*.sql",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.8",
    # PyYAML 本身不附带 mypy stub。
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# integration 测试会启动真实的 claude -p，在嵌套交互会话中可能死锁（#46416）。
# 默认排除；需要时显式运行下列命令。
# CC_INTEGRATION=1 .venv/bin/python -m pytest -m integration tests/cc_host/test_integration.py
addopts = "-m 'not integration and not benchmark'"
markers = [
    "integration: tests that spawn a real `claude -p` subprocess (skip in nested interactive sessions; #46416)",
    "benchmark: slice-040 layer-2 quality checks that spawn a real cc distillation agent (run explicitly: pytest -m benchmark)",
]
